Update add Google

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta property="og:description" content="Transformasi bisnis Anda ke ranah digital dengan tampilan profesional dan performa optimal.">
   
   <title>funDev Team | Digital Solutions Agency</title>
+  <meta name="google-site-verification" content="hgRWiyuguynYVdgDvyg3yWvjHixWjxyK2zQfBXAaw2k" />
   <link rel="stylesheet" href="/src/style.css">
 </head>
 
