--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <meta name="description" content="funDev Team - Mitra strategis pembuatan website profesional untuk UMKM dan Landing Page korporasi.">
+  <meta name="description" content="funDev Team - Jasa pembuatan website UMKM & Landing Page profesional. Desain modern, cepat, dan SEO-friendly untuk meningkatkan bisnis Anda.">
+  <meta name="keywords" content="jasa website, pembuatan website umkm, landing page profesional, digital agency indonesia, fundev team">
+  <link rel="canonical" href="https://fundev-agency.vercel.app/" />
+
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://fundev-agency.vercel.app/">
   <meta property="og:title" content="funDev Team | Digital Solutions Agency">
   <meta property="og:description" content="Transformasi bisnis Anda ke ranah digital dengan tampilan profesional dan performa optimal.">
-  
-  <title>funDev Team | Digital Solutions Agency</title>
+  <meta property="og:image" content="https://fundev-agency.vercel.app/images/og-image.jpg">
+
+  <title>funDev Team | Digital Solutions Agency - Jasa Website UMKM</title>
   <meta name="google-site-verification" content="hgRWiyuguynYVdgDvyg3yWvjHixWjxyK2zQfBXAaw2k" />
   <link rel="stylesheet" href="/src/style.css">
 </head>
@@ -24,7 +30,6 @@
   </nav>
 
   <main>
-    
     <section class="max-w-6xl mx-auto px-6 pt-20 pb-32">
       <div class="max-w-3xl">
         <h1 class="text-4xl md:text-8xl font-bold leading-[1.1] mb-8 tracking-tight">
@@ -34,7 +39,7 @@
           Partner teknologi strategis untuk transformasi bisnis Anda ke ranah digital secara <span class="text-white font-medium">profesional dan eksklusif.</span>
         </p>
         <div class="flex flex-wrap gap-4">
-          <a href="https://wa.me/6283117163605" class="bg-white text-slate-950 px-8 py-4 rounded-full font-bold hover:bg-cyan-400 transition-all active:scale-95 text-center">Mulai Proyek</a>
+          <a href="https://wa.me/6283117163605?text=Halo%20funDev,%20saya%20ingin%20buat%20website" class="bg-white text-slate-950 px-8 py-4 rounded-full font-bold hover:bg-cyan-400 transition-all active:scale-95 text-center">Mulai Proyek</a>
           <a href="#works" class="border border-slate-800 px-8 py-4 rounded-full font-bold hover:bg-slate-900 transition-all text-center inline-block">Portofolio Kami</a>
         </div>
       </div>
@@ -42,31 +47,30 @@
 
     <section class="max-w-6xl mx-auto px-6 pb-32">
       <div class="grid grid-cols-1 md:grid-cols-4 gap-6">
-        
         <div class="md:col-span-2 bg-slate-900 border border-slate-800 p-8 rounded-3xl hover:-translate-y-2 transition-all duration-300">
           <h3 class="text-2xl font-bold mb-4">Mengapa funDev?</h3>
           <p class="text-slate-400">Kami adalah kolektif pengembang berbakat yang berfokus menghadirkan solusi digital tepat sasaran untuk mendukung pertumbuhan bisnis Anda di era digital.</p>
         </div>
-
         <div class="bg-cyan-500 text-slate-950 p-8 rounded-3xl flex flex-col justify-between hover:-translate-y-2 transition-all duration-300">
           <div class="text-4xl font-bold italic">99%</div>
           <p class="font-bold uppercase text-xs tracking-widest">Kepuasan Klien</p>
         </div>
-
         <div class="bg-slate-900 border border-slate-800 p-8 rounded-3xl text-sm hover:-translate-y-2 transition-all duration-300">
           <p class="text-slate-500 mb-4 uppercase tracking-widest text-[10px]">Teknologi Utama</p>
           <div class="flex gap-2">
-            <span class="bg-slate-800 px-3 py-1 rounded-full text-[10px]">Vite</span>
-            <span class="bg-slate-800 px-3 py-1 rounded-full text-[10px]">Tailwind</span>
-            <span class="bg-slate-800 px-3 py-1 rounded-full text-[10px]">React</span>
+        <span class="bg-slate-800 px-3 py-1 rounded-full text-[10px]">HTML5 & CSS3</span>
+        <span class="bg-slate-800 px-3 py-1 rounded-full text-[10px]">PHP & Laravel</span>
+        <span class="bg-slate-800 px-3 py-1 rounded-full text-[10px]">MySQL</span>
+        <span class="bg-slate-800 px-3 py-1 rounded-full text-[10px]">Tailwind CSS</span>
+        <span class="bg-slate-800 px-3 py-1 rounded-full text-[10px]">AdminLTE</span>
+        <span class="bg-slate-800 px-3 py-1 rounded-full text-[10px]">React & Vite</span>
+
           </div>
         </div>
-
         <div class="md:col-span-2 bg-gradient-to-r from-cyan-600 to-blue-700 p-8 rounded-3xl hover:-translate-y-2 transition-all duration-300">
           <h3 class="text-xl font-bold">Tim Ahli Terintegrasi</h3>
           <p class="text-cyan-100/70 text-sm mt-2 font-medium">Kolaborasi antara Backend, Frontend, dan UI/UX Designer untuk hasil yang presisi.</p>
         </div>
-
         <div class="md:col-span-2 bg-slate-900 border border-slate-800 p-8 rounded-3xl flex items-center gap-6 hover:-translate-y-2 transition-all duration-300">
           <div class="h-12 w-12 bg-white rounded-full flex-shrink-0 flex items-center justify-center text-slate-950 font-black text-sm">QA</div>
           <div>
@@ -84,11 +88,10 @@
           <p class="text-slate-500 text-sm">Proyek strategis yang telah kami selesaikan dengan hasil maksimal.</p>
         </div>
       </div>
-
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
         <div class="group cursor-pointer">
           <div class="overflow-hidden rounded-3xl bg-slate-900 aspect-video mb-6 border border-slate-800">
-            <img src="/images/mockup1.jpg" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500 opacity-80 group-hover:opacity-100">
+            <img src="/images/mockup1.jpg" alt="Mockup website UMKM Retail profesional oleh funDev Team" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500 opacity-80 group-hover:opacity-100">
           </div>
           <div class="flex justify-between items-center">
             <div>
@@ -98,10 +101,9 @@
             <span class="text-slate-500 text-xs font-mono">2026</span>
           </div>
         </div>
-
         <div class="group cursor-pointer">
           <div class="overflow-hidden rounded-3xl bg-slate-900 aspect-video mb-6 border border-slate-800">
-            <img src="/images/dashboard.jpg" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500 opacity-80 group-hover:opacity-100">
+            <img src="/images/dashboard.jpg" alt="Dashboard sistem manajemen bisnis custom oleh funDev Team" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500 opacity-80 group-hover:opacity-100">
           </div>
           <div class="flex justify-between items-center">
             <div>
@@ -131,30 +133,6 @@
           <div class="text-cyan-400 text-3xl mb-6 group-hover:scale-110 transition-transform origin-left inline-block">✦</div>
           <h4 class="text-xl font-bold mb-3">UI/UX Design</h4>
           <p class="text-slate-400 text-sm leading-relaxed">Desain antarmuka yang modern, intuitif, dan memudahkan pelanggan Anda dalam bertransaksi.</p>
-        </div>
-      </div>
-    </section>
-
-    <section class="max-w-6xl mx-auto px-6 py-24 border-t border-slate-900">
-      <div class="text-center mb-16">
-        <h2 class="text-4xl font-bold mb-4">Metodologi Kerja</h2>
-        <p class="text-slate-500">Proses terstruktur untuk hasil yang presisi dan tepat waktu.</p>
-      </div>
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-        <div class="relative p-8 bg-slate-900/50 border border-slate-800 rounded-3xl hover:border-cyan-400/50 transition-colors">
-          <div class="text-5xl font-black text-slate-800 absolute top-4 right-6">01</div>
-          <h4 class="text-xl font-bold mb-4">Konsultasi</h4>
-          <p class="text-slate-400 text-sm leading-relaxed">Tahap awal diskusi mendalam untuk memahami kebutuhan dan tujuan strategis bisnis Anda.</p>
-        </div>
-        <div class="relative p-8 bg-slate-900/50 border border-slate-800 rounded-3xl hover:border-cyan-400/50 transition-colors">
-          <div class="text-5xl font-black text-slate-800 absolute top-4 right-6">02</div>
-          <h4 class="text-xl font-bold mb-4">Pengembangan</h4>
-          <p class="text-slate-400 text-sm leading-relaxed">Proses koding dan desain dilakukan dengan standar kualitas tinggi dan pengawasan ketat.</p>
-        </div>
-        <div class="relative p-8 bg-slate-900/50 border border-slate-800 rounded-3xl hover:border-cyan-400/50 transition-colors">
-          <div class="text-5xl font-black text-slate-800 absolute top-4 right-6">03</div>
-          <h4 class="text-xl font-bold mb-4">Finalisasi</h4>
-          <p class="text-slate-400 text-sm leading-relaxed">Tahap peluncuran sistem serta bantuan teknis untuk memastikan website beroperasi sempurna.</p>
         </div>
       </div>
     </section>
