--- a/index.html
+++ b/index.html
@@ -56,16 +56,15 @@
           <p class="font-bold uppercase text-xs tracking-widest">Kepuasan Klien</p>
         </div>
         <div class="bg-slate-900 border border-slate-800 p-8 rounded-3xl text-sm hover:-translate-y-2 transition-all duration-300">
+          
           <p class="text-slate-500 mb-4 uppercase tracking-widest text-[10px]">Teknologi Utama</p>
-          <div class="flex gap-2">
-        <span class="bg-slate-800 px-3 py-1 rounded-full text-[10px]">HTML5 & CSS3</span>
+        <div class="flex flex-wrap gap-2"> <span class="bg-slate-800 px-3 py-1 rounded-full text-[10px]">HTML5 & CSS3</span>
         <span class="bg-slate-800 px-3 py-1 rounded-full text-[10px]">PHP & Laravel</span>
         <span class="bg-slate-800 px-3 py-1 rounded-full text-[10px]">MySQL</span>
         <span class="bg-slate-800 px-3 py-1 rounded-full text-[10px]">Tailwind CSS</span>
         <span class="bg-slate-800 px-3 py-1 rounded-full text-[10px]">AdminLTE</span>
         <span class="bg-slate-800 px-3 py-1 rounded-full text-[10px]">React & Vite</span>
-
-          </div>
+        </div>
         </div>
         <div class="md:col-span-2 bg-gradient-to-r from-cyan-600 to-blue-700 p-8 rounded-3xl hover:-translate-y-2 transition-all duration-300">
           <h3 class="text-xl font-bold">Tim Ahli Terintegrasi</h3>
